Migrate vantage-report from Java 11 to Java 21